refactor(tests): replace Collections and Arrays uses with List.of for improved consistency